[26058] Fix minor bug to trigger rebuild